third party libraries are updated

--- a/openexr/openexr.vcxproj
+++ b/openexr/openexr.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{e5e0dcd1-bbc2-40ee-bd77-aab3de80b177}</ProjectGuid>
     <RootNamespace>openexrrary</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.14393.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -110,7 +110,7 @@
     <ClCompile>
       <Optimization>Full</Optimization>
       <PreprocessorDefinitions>WIN32;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>../zlib;$(ProjectDir)\;$(ProjectDir)\Imath\;$(ProjectDir)\IlmImf\;$(ProjectDir)\Iex\;$(ProjectDir)\IlmThread\;$(ProjectDir)\Half\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\;$(ProjectDir)\Imath\;$(ProjectDir)\IlmImf\;$(ProjectDir)\Iex\;$(ProjectDir)\IlmThread\;$(ProjectDir)\Half\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
